# UnityMultiDrawIndirectPlugin

./: .gitignore  LICENSE  README.md  package.json
NativePlugin~/: CMakeLists.txt  build_android.ps1  build_macos.sh
NativePlugin~/src/: InlineHook.h  MDIBackend.h  MDIBackend_D3D11.cpp  MDIBackend_D3D11.h  MDIBackend_D3D12.cpp  MDIBackend_D3D12.h  MDIBackend_GLES.cpp  MDIBackend_GLES.h  MDIBackend_Metal.h  MDIBackend_Metal.mm  MDIBackend_Stub.h  MDIBackend_Vulkan.cpp  MDIBackend_Vulkan.h  MDILog.h  MergeArgs.hlsl  MergeArgs_cs.h  MultiDrawIndirect.cpp
NativePlugin~/src/Unity/: IUnityRenderingExtensions.h
NativePlugin~/src/gles/: gles_minimal.h
NativePlugin~/src/vulkan/: vulkan.h
Plugins/macOS/GfxPluginMDI.bundle/Contents/: Info.plist
Plugins/macOS/GfxPluginMDI.bundle/Contents/MacOS/: GfxPluginMDI
Runtime/: MultiDrawIndirect.cs  Saivs.MDI.Runtime.asmdef
Runtime/ShaderLibrary/: MDI.hlsl
Samples/MDITest/Shaders/: MDITestShader.shader
Samples~/MDITest/: MDITest.cs  MDITestShader.shader  PluginTest.unity
Samples~/MDITest/Materials/: MDITest.mat
Samples~/MDITest/Scripts/: FPSCounter.cs  MDIRenderPass.cs  MDITest.cs  MDITestBufferManager.cs  MDITestController.cs  Saivs.Graphics.Test.asmdef
Samples~/MDITest/Shaders/: MDITestShader.shader
